syntax = "proto3";

option go_package = "github.com/Fantom-foundation/go-lachesis/src/inter/wire";

package wire;

message InternalTransaction {
  uint64 Nonce = 1;
  uint64 Amount = 2;
  string Receiver = 3;
  uint64 UntilBlock = 4;
}

message ExtTxns {
    repeated bytes List = 2;
}

message Event {
  uint64 SfNum = 1;	
  uint64 Seq = 2;
  string Creator = 3;
  repeated bytes Parents = 4;
  uint64 LamportTime = 5;
  repeated InternalTransaction InternalTransactions = 6;
  oneof ExternalTransactions {
    ExtTxns ExtTxnsValue = 7;
    bytes ExtTxnsHash = 8;
  }
  string Sign = 9;
}

message Block {
  uint64 Index = 1;
  repeated bytes Events = 2;
}
