syntax = "proto3";

package internal;

import "google/protobuf/empty.proto";
import "inter/wire/wire.proto";

service Node {
  rpc SelfID(google.protobuf.Empty) returns (ID) {}
  rpc StakeOf(ID) returns (Balance) {}
  rpc SendTo(TransferRequest) returns (TransferResponse) {}
  rpc GetTxnInfo(TransactionRequest) returns (TransactionResponse) {}
  rpc SetLogLevel(LogLevel) returns (google.protobuf.Empty) {}
}

message ID {
  string hex = 1;
}

message Balance {
  uint64 amount = 1;
}

message TransferRequest{
  uint64 nonce = 1;
  ID receiver = 2;
  uint64 amount = 3;
  uint64 until = 4;
}

message TransferResponse {
  string hex = 1;
}

message TransactionRequest {
  string hex = 1;
}

message TransactionResponse {
  wire.InternalTransaction txn = 1;
  wire.Event event = 2;
  wire.Block block = 3;   
}

message LogLevel {
  string level = 1;
}


